Add source selector unit tests (#1379)

--- a/bftengine/tests/bcstatetransfer/CMakeLists.txt
+++ b/bftengine/tests/bcstatetransfer/CMakeLists.txt
@@ -14,3 +14,9 @@ target_link_libraries(bcstatetransfer_tests GTest::Main)
 #TODO [TK] this test uses kvbc and should be moved from bftengine
 target_link_libraries(bcstatetransfer_tests corebft kvbc )
 target_compile_options(bcstatetransfer_tests PUBLIC "-Wno-sign-compare")
+
+add_executable(source_selector_test source_selector_test.cpp)
+add_test(source_selector_test source_selector_test)
+target_link_libraries(source_selector_test GTest::Main corebft)
+# Not using target_link_libraries, because the header is in the src directory.
+target_include_directories(source_selector_test PRIVATE ${bftengine_SOURCE_DIR}/src/bcstatetransfer)
